[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polar-accesslink"
version = "0.1.0"
description = "Shared Polar AccessLink core with MCP and CLI adapters for data export"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Kymylyy" },
]
keywords = ["polar", "accesslink", "mcp", "cli", "fitness", "cardio"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.19.0",
  "pytest>=8.4.0",
  "ruff>=0.15.0",
]

[project.scripts]
polar-mcp = "polar_accesslink.mcp_server:main"
polar-cli = "polar_accesslink.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
